--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
         <div id="sitelogo">本好きのためのSNS</div>
         <ul id="headermenulist">
             <li>
-                <a class="headermenu" id="top" href="#">トップ</a>
+                <a id="top" href="#">トップ</a>
             </li>
             <li>
-                <a class="headermenu" id="tweet" href="#">本のつぶやき</a>
+                <a id="tweet" href="#">本のつぶやき</a>
             </li>
             <li>
-                <a class="headermenu" id="bookshelf" href="#">みんなの本棚</a>
+                <a id="bookshelf" href="#">みんなの本棚</a>
             </li>
             <li>
-                <a class="headermenu" id="search" href="#">自分に合った本を探す</a>
+                <a id="search" href="#">自分に合った本を探す</a>
             </li>
         </ul>
         <button id="login">ログイン</button>
@@ -36,7 +36,7 @@
                 <p id="topcomment">People who like books and those who don't,<br>please feel free to use it.</p>
             </div>
             <div id="topright">
-                <img id="topimage" src="images/stackbooks.jpg">
+                <img id="topimage" src="images/stackbooks.jpg" alt="トップ画像">
             </div>
         </div>
     </div>
