--- a/index.html
+++ b/index.html
@@ -12,18 +12,10 @@
     <header>
         <div id="sitelogo">本好きのためのSNS</div>
         <ul id="headermenulist">
-            <li>
-                <a id="top" href="#">トップ</a>
-            </li>
-            <li>
-                <a id="tweet" href="#">本のつぶやき</a>
-            </li>
-            <li>
-                <a id="bookshelf" href="#">みんなの本棚</a>
-            </li>
-            <li>
-                <a id="search" href="#">自分に合った本を探す</a>
-            </li>
+            <li id="top" class="tab active">トップ</li>
+            <li id="tweet" class="tab">本のつぶやき</li>
+            <li id="bookshelf" class="tab">みんなの本棚</li>
+            <li id="search" class="tab">自分に合った本を探す</li>
         </ul>
         <button id="login">ログイン</button>
     </header>
