--- a/index.html
+++ b/index.html
@@ -10,45 +10,45 @@
 
   <body>
     <header>
-        <div id="sitelogo">本好きのためのSNS</div>
+        <div id="site-logo">本好きのためのSNS</div>
         <ul class="tabs">
-            <li id="top" class="tab_item active">トップ</li>
-            <li id="tweet" class="tab_item">本のつぶやき</li>
-            <li id="bookshelf" class="tab_item">みんなの本棚</li>
-            <li id="search" class="tab_item">自分に合った本を探す</li>
+            <li id="top" class="tab-item active">トップ</li>
+            <li id="tweet" class="tab-item">本のつぶやき</li>
+            <li id="bookshelf" class="tab-item">みんなの本棚</li>
+            <li id="search" class="tab-item">自分に合った本を探す</li>
         </ul>
 
         <button id="login">ログイン</button>
     </header>
 
     <div id="container">
-        <div class="tab_content is-show" id="top_content">
-            <div id="somespace"></div>
-            <div id="topmessage">
-                <div id="topleft">
-                    <p id="toptitle">Find<br>Yourself</p>
-                    <p id="topcomment">People who like books and those who don't,<br>please feel free to use it.</p>
+        <div class="tab-content is-show" id="top-content">
+            <div id="top-message">
+                <div id="top-left">
+                    <p id="top-title">Find<br>Yourself</p>
+                    <p id="top-comment">People who like books and those who don't,<br>please feel free to use it.</p>
                 </div>
 
-                <div id="topright">
-                    <img id="topimage" src="images/stackbooks.jpg" alt="トップ画像">
+                <div id="top-right">
+                    <img id="top-image" src="images/stackbooks.jpg" alt="トップ画像">
                 </div>
             </div>
         </div>
 
-        <div class="tab_content" id="tweet_content">
-            <div id="somespace"></div>
-            <p class="c-txtsp">本のつぶやきの内容がここに入ります</p>
+        <div class="tab-content" id="tweet-content">
+            <div class="some-space">
+                <div id="post-left-block"></div>
+                <div id="post">投稿する
+                    <span><img id="post-image" src="images/post.png" alt="投稿画像"></span>
+                </div>
+            </div>
+            <div id="aaa"></div>
         </div>
 
-        <div class="tab_content" id="bookshelf_content">
-            <div id="somespace"></div>
-            <p class="c-txtsp">みんなの本棚の内容がここに入ります</p>
+        <div class="tab-content" id="bookshelf-content">
         </div>
 
-        <div class="tab_content" id="search_content">
-            <div id="somespace"></div>
-            <p class="c-txtsp">自分に合った本を探すの内容がここに入ります</p>
+        <div class="tab-content" id="search-content">
         </div>
     
 
