--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="tab-content" id="tweet-content">
             <div class="some-space">
                 <div id="post-left-block"></div>
-                <div id="post">投稿する
+                <div id="post-btn">投稿する
                     <span><img id="post-image" src="images/post.png" alt="投稿画像"></span>
                 </div>
             </div>
