--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
 
         <div class="tab-content" id="tweet-content">
             <div class="some-space">
-                <div id="post-left-block"></div>
                 <div id="post-btn">投稿する
                     <span><img id="post-image" src="images/post.png" alt="投稿画像"></span>
                 </div>
@@ -55,7 +54,7 @@
     </div>
 
     <footer></footer>
-
+    <script src="./js/moment.js"></script>
     <script src="./js/app.js"></script>
   </body>
 </html>
