--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
                     <span><img id="post-image" src="images/post.png" alt="投稿画像"></span>
                 </div>
             </div>
-            <div id="aaa"></div>
+            <div id="tweet-area">
+                <div id="all-tweet"></div>
+            </div>
         </div>
 
         <div class="tab-content" id="bookshelf-content">
