--- a/index.html
+++ b/index.html
@@ -10,15 +10,31 @@
 
   <body>
     <header>
-        <div id="site-logo">本好きのためのSNS</div>
-        <ul class="tabs">
-            <li id="top" class="tab-item active">トップ</li>
-            <li id="tweet" class="tab-item">本のつぶやき</li>
-            <li id="bookshelf" class="tab-item">みんなの本棚</li>
-            <li id="search" class="tab-item">自分に合った本を探す</li>
-        </ul>
+        <div id="header-upper">
+            <div id="site-logo">本好きのためのSNS</div>
+            <ul class="tabs">
+                <li id="top" class="tab-item active-item">トップ</li>
+                <li id="tweet" class="tab-item">本のつぶやき</li>
+                <li id="bookshelf" class="tab-item">みんなの本棚</li>
+                <li id="search" class="tab-item">自分に合った本を探す</li>
+            </ul>
+    
+            <button id="login">ログイン</button>
+        </div>
 
-        <button id="login">ログイン</button>
+        <div id="header-lower">
+            <div id="top-space" class="header-space active-space"></div>
+
+            <div id="tweet-space" class="header-space">
+                <div id="post-btn">投稿する
+                    <span><img id="post-image" src="images/post.png" alt="投稿画像"></span>
+                </div>
+            </div>
+
+            <div id="bookshelf-space" class="header-space"></div>
+
+            <div id="searcg-space" class="header-space"></div>
+        </div>
     </header>
 
     <div id="container">
@@ -36,21 +52,14 @@
         </div>
 
         <div class="tab-content" id="tweet-content">
-            <div class="some-space">
-                <div id="post-btn">投稿する
-                    <span><img id="post-image" src="images/post.png" alt="投稿画像"></span>
-                </div>
-            </div>
             <div id="tweet-area">
                 <div id="all-tweet"></div>
             </div>
         </div>
 
-        <div class="tab-content" id="bookshelf-content">
-        </div>
+        <div class="tab-content" id="bookshelf-content"></div>
 
-        <div class="tab-content" id="search-content">
-        </div>
+        <div class="tab-content" id="search-content"></div>
     
 
     </div>
