--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebBook</title>
     <script src="./js/moment.js"></script>
+    <script src="./js/moment-with-locales.js"></script>
     <script src="./js/app.js"></script>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
