--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
                 <span class='close'>X</span>
             </div>
             <div class="modal-body">
-                <form>
+                <form id="post-form">
                     <div class="form-input">
                         <p>本のタイトル</p>
-                        <input type="text" name="book-title">
+                        <input type="text" id="book-title" name="book-title">
                     </div>
                     <div class="form-input">
                         <p>画像アップロード</p>
@@ -83,15 +83,15 @@
                     </div>
                     <div class="form-input">
                         <p>おすすめ度</p>
-                        <input>
+                        <input type="text" id="book-evaluation" name="book-evaluation">
                     </div>
                     <div class="form-input">
                         <p>この本を一言で表現するなら</p>
-                        <input>
+                        <input type="text" id="book-comment" name="book-comment">
                     </div>
                     <div class="form-input">
                         <p>本の感想</p>
-                        <input>
+                        <input type="text" id="book-thoughts" name="book-thoughts">
                     </div>
                     <div class="form-input">
                         <p>あなたはどんな人？</p>
