--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="./js/moment.js"></script>
     <script src="./js/moment-with-locales.js"></script>
     <script src="./js/app.js"></script>
+    <link href="./images/fontawesome/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css" />
   </head>
 
