--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
     <script src="./js/moment.js"></script>
     <script src="./js/moment-with-locales.js"></script>
     <script src="./js/app.js"></script>
-    <link href="./images/fontawesome/css/all.css" rel="stylesheet">
+    <link href="./images/fontawesome/css/all.css" rel="stylesheet" />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
-
   <body>
     <header>
         <div id="header-upper">
@@ -70,13 +69,13 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h2>本の口コミを投稿する</h2>
-                <span class='close'>X</span>
+                <span class="close">X</span>
             </div>
             <div class="modal-body">
                 <form id="post-form" action="index.html" method="post" enctype="multipart/form-data">
                     <div class="form-input">
                         <p>本のタイトル</p>
-                        <input type="text" id="book-title" name="book-title">
+                        <input type="text" id="book-title" size="15em" name="book-title" class="input">
                     </div>
                     <div class="form-input">
                         <p>画像アップロード</p>
@@ -100,20 +99,20 @@
                     </div>
                     <div class="form-input">
                         <p>この本を一言で表現するなら</p>
-                        <input type="text" id="book-comment" name="book-comment">
+                        <input type="text" id="book-comment" name="book-comment" class="input">
                     </div>
                     <div class="form-input">
-                        <p>本の感想</p>
-                        <input type="text" id="book-thoughts" name="book-thoughts">
+                        <p>その他：本の感想など</p>
+                        <textarea id="book-thoughts" row="20" cols="60" name="book-thoughts" class="input"></textarea>
                     </div>
-                    <div class="form-input">
+                    <!-- <div class="form-input">
                         <p>あなたはどんな人？</p>
                         <input>
-                    </div>
+                    </div> -->
                 </form>
             </div>
             <div class="modal-footer">
-                <button id="post-confirm-btn" type="submit">投稿する</button>
+                <button type="submit" id="post-confirm-btn">投稿する</button>
             </div>
         </div>
     </div>
