--- a/index.html
+++ b/index.html
@@ -117,6 +117,21 @@
         </div>
     </div>
 
+    <div id="demo-confirm-modal" class="confirm-modal">
+        <div class="confirm-modal-content">
+            <div class="confirm-modal-header">
+                投稿を確定する
+            </div>
+            <div class="confirm-modal-body">
+                <p>誹謗中傷に当たる表現がないことを確認してください。<br>みんなが楽しめるようマナーを守りましょう。</p>
+            </div>
+            <div class="confirm-modal-footer">
+                <button class="confirm-cancel">キャンセル</button>
+                <button type="submit" id="confirm-btn">投稿する</button>
+            </div>
+        </div>
+    </div>
+
     <footer></footer>
   </body>
 </html>
