--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
                 <h2>本の口コミを投稿する</h2>
                 <span class="form-close">X</span>
             </div>
-            <div class="modal-body">
-                <form id="post-form" action="index.html" method="post" enctype="multipart/form-data">
+            <form id="post-form" action="index.html" method="post" enctype="multipart/form-data">
+                <div class="modal-body">
                     <div class="form-input">
                         <p>本のタイトル</p>
                         <input type="text" id="book-title" size="15em" name="book-title" class="input">
@@ -109,11 +109,11 @@
                         <p>あなたはどんな人？</p>
                         <input>
                     </div> -->
-                </form>
-            </div>
-            <div class="modal-footer">
-                <button type="submit" id="post-confirm-btn">投稿する</button>
-            </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" id="post-confirm-btn">投稿する</button>
+                </div>
+            </form>
         </div>
     </div>
 
