--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebBook</title>
-    <script src="./js/moment.js"></script>
-    <script src="./js/moment-with-locales.js"></script>
+    <script src="./moment/moment.js"></script>
+    <script src="./moment/moment-with-locales.js"></script>
+    <script src="./js/tab.js"></script>
+    <script src="./js/tweet.js"></script>
     <script src="./js/app.js"></script>
     <link href="./images/fontawesome/css/all.css" rel="stylesheet" />
     <link rel="stylesheet" href="./css/style.css" />
