--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="./moment/moment.js"></script>
     <script src="./moment/moment-with-locales.js"></script>
     <script src="./js/tab.js"></script>
+    <script src="./js/modal.js"></script>
     <script src="./js/tweet.js"></script>
     <script src="./js/app.js"></script>
     <link href="./images/fontawesome/css/all.css" rel="stylesheet" />
