--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
         <div class="tab-content" id="tweet-content">
             <div id="tweet-area">
-                <div id="all-tweet"></div>
+                <ul id="all-tweet"></ul>
             </div>
         </div>
         <div class="tab-content" id="bookshelf-content"></div>
